fixed promo section mobile

--- a/src/responsive.css
+++ b/src/responsive.css
@@ -9,89 +9,8 @@
     margin-top: 12px !important;
     margin-bottom: 104px !important;
   }
-  .btn {
-    display: none;
-  }
-  .promo__menu {
-    position: relative;
-  }
-
-  .promo__list {
-		list-style-type: none;
+  .nav__btn {
     display: none !important;
-    flex-direction: column;
-    width: 100%;
-    position: fixed;
-    top: 150px;
-    margin: 0 auto;
-		right: 0;
-    background-color: white;
-    /* border-top: 1px solid #ccc; */
-    z-index: 10;
-    list-style-type: none;
-    max-height: 0;
-    /* overflow: hidden; */
-    transition: max-height 0.3s ease-in-out;
   }
-  /* Стили для открытого состояния списка */
-  .promo__list.open {
-		display: flex !important;
-    max-height: calc(100vh - 50px); /* Высота на всю высоту экрана за вычетом высоты гамбургер-меню */
-  }
-
-  .promo__link{
-		padding: 10px;
-    display: block;
-    color: black;
-    text-align: center;
-    border-bottom: 1px solid #C5E6EA;
-    line-height: 140%;
-		font-size: 16px;
-  }
-	.promo__link::after {
-		content: '';
-		position: absolute;
-		left: 50%;
-		bottom: -5px; /* Расстояние от нижней части ссылки */
-		transform: translateX(-50%);
-		width: 136px; /* Ширина границы */
-		height: 1px; /* Высота границы */
-		background-color: #ccc; /* Цвет границы */
-	}
-	
-.promo__link-text{
-	font-size: 16px;
-}
-	/* Стили для изменения цвета при наведении */
-.promo__link-text:hover {
-  color: var(--Primary-color, #12A6C8);
-	font-size: 20px;
-}
-
-/* Стили для изменения цвета при активации (клике) */
-.promo__link-text:active {
-  color: var(--Primary-color, #12A6C8);
-	font-size: 20px;
-}
-
-  .hamburger {
-    display: block; /* Показать иконку гамбургера */
-    cursor: pointer;
-    position: absolute; /* Расположить иконку гамбургера внутри .promo__menu */
-    top: 0; /* Расположить в верхнем углу */
-    right: 0; /* Прижать к правому краю */
-  }
-
-  .bar {
-    display: block;
-    width: 25px;
-    height: 3px;
-    background: #333;
-    margin: 6px 0;
-    transition: 0.4s;
-  }
-
-  .slidecontainer {
-    display: none; /* Скрыть слайдер на мобильных устройствах */
-  }
+  
 }
